// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`All tags, with override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Title from Component</title>
            <meta data-rh="true" content="Component description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="SOCIAL_TITLE" name="twitter:title"/><meta data-rh="true" content="SOCIAL_DESCRIPTION" name="twitter:description"/><meta data-rh="true" content="https://sample.domain/THUMBNAIL_PATH" name="twitter:image"/><meta data-rh="true" content="@SITE_NAME" name="twitter:site"/><meta data-rh="true" content="SOCIAL_TITLE" property="og:title"/><meta data-rh="true" content="https://sample.domain/THUMBNAIL_PATH" property="og:image"/><meta data-rh="true" content="SOCIAL_TITLE" property="og:image:alt"/><meta data-rh="true" content="SOCIAL_DESCRIPTION" property="og:description"/><meta data-rh="true" content="SITE_NAME" property="og:site_name"/><meta data-rh="true" content="PAGE_URL" property="og:url"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYzmJ7d6zzvZgN+EzlcK8C0PjrXbhXd7mURNzeYXufrjWtawtW9ACM1ijJhDfADNL/i91/O5RomUpTqq1YIno4XFLahhTb2PzgFQYH8dkstWwA1redGvYAmUZ2tUy0OYCiQ=">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><div><p>A dummy internal component.</p></div></div></div>
            
            
          </body>
        </html>"
`;

exports[`Basic tags, no override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Application Title</title>
            <meta data-rh="true" content="Application Description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Application Title" name="twitter:title"/><meta data-rh="true" content="Application Description" name="twitter:description"/><meta data-rh="true" content="Application Title" property="og:title"/><meta data-rh="true" content="Application Description" property="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYzmJ7d6zzvZgN+EzlcK8C0PjrXbhXd7mURNzeYXufrjWtawtW9ACM1ijJhDfADNL/i91/O5RomUpTqq1YIno4XFLahhTb2PzgFQYH8dkstWwA1redGvYAmUZ2tUy0OYCiQ=">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p></div></div>
            
            
          </body>
        </html>"
`;

exports[`Basic tags, with override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Title from Component</title>
            <meta data-rh="true" content="Component description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Title from Component" name="twitter:title"/><meta data-rh="true" content="Component description" name="twitter:description"/><meta data-rh="true" content="Title from Component" property="og:title"/><meta data-rh="true" content="Component description" property="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYzmJ7d6zzvZgN+EzlcK8C0PjrXbhXd7mURNzeYXufrjWtawtW9ACM1ijJhDfADNL/i91/O5RomUpTqq1YIno4XFLahhTb2PzgFQYH8dkstWwA1redGvYAmUZ2tUy0OYCiQ=">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><div><p>A dummy internal component.</p></div></div></div>
            
            
          </body>
        </html>"
`;

exports[`Using <MetaTags> children feature Basic tags, no override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Application Title</title>
            <meta data-rh="true" content="Application Description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Application Title" name="twitter:title"/><meta data-rh="true" content="Application Description" name="twitter:description"/><meta data-rh="true" content="Application Title" property="og:title"/><meta data-rh="true" content="Application Description" property="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYzmJ7d6zzvZgN+EzlcK8C0PjrXbhXd7mURNzeYXufrjWtawtW9ACM1ijJhDfADNL/i91/O5RomUpTqq1YIno4XFLahhTb2PzgFQYH8dkstWwA1redGvYAmUZ2tUy0OYCiQ=">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p></div></div>
            
            
          </body>
        </html>"
`;

exports[`Using <MetaTags> children feature Basic tags, with override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Title from Component - Application Title</title>
            <meta data-rh="true" content="Component description - Application Description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Title from Component - Application Title" name="twitter:title"/><meta data-rh="true" content="Component description - Application Description" name="twitter:description"/><meta data-rh="true" content="Title from Component - Application Title" property="og:title"/><meta data-rh="true" content="Component description - Application Description" property="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYzmJ7d6zzvZgN+EzlcK8C0PjrXbhXd7mURNzeYXufrjWtawtW9ACM1ijJhDfADNL/i91/O5RomUpTqq1YIno4XFLahhTb2PzgFQYH8dkstWwA1redGvYAmUZ2tUy0OYCiQ=">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><div><p>A dummy internal component.</p></div></div></div>
            
            
          </body>
        </html>"
`;
